--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
             - POSTGRES_PASSWORD=passwords
         ports:   
         - "5432:5432"
-        #volumes:
-        #- "dbdata:/var/lib/postgresql/data"   
+        volumes:
+        - db_data:/var/lib/postgresql/data
         
     redis:
         image: redis:latest
@@ -29,6 +29,6 @@ services:
         volumes:
         - .:/app
 
-    #volumes:
-        #dbdata:
+volumes:
+    db_data:
         
