--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.8'
 
 services:
     db:
-        image: postgres:latest
+        image: postgres:11
         environment:
-            - POSTGRES_PASSWORD=passwords
+            - POSTGRES_PASSWORD=password
         ports:   
         - "5432:5432"
         volumes:
